// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreupgradeReportsReducer should return initial state 1`] = `
Object {
  "error": Object {},
  "loadingPreupgradeReports": false,
  "preupgradeReports": Array [],
}
`;

exports[`PreupgradeReportsReducer should show error on request failure 1`] = `
Object {
  "error": Object {
    "errorMsg": "This is error",
    "statusText": "Not good",
  },
  "loadingPreupgradeReports": false,
  "preupgradeReports": Array [],
}
`;

exports[`PreupgradeReportsReducer should start loading reports on request 1`] = `
Object {
  "error": Object {},
  "loadingPreupgradeReports": true,
  "preupgradeReports": Array [],
}
`;

exports[`PreupgradeReportsReducer should stop loading on reports success 1`] = `
Object {
  "error": Object {},
  "loadingPreupgradeReports": false,
  "preupgradeReports": Array [
    Object {
      "entries": Array [
        Object {
          "id": 42,
          "severity": "Too severe to talk about",
          "title": "Fix me!",
        },
        Object {
          "id": 43,
          "severity": "medium",
          "title": "I am broken too",
        },
      ],
      "hostId": 5,
    },
    Object {
      "entries": Array [
        Object {
          "id": 44,
          "severity": "high",
          "title": "Octocat is not happy",
        },
        Object {
          "id": 45,
          "severity": "low",
          "title": "Not enough credits",
        },
      ],
      "hostId": 6,
    },
  ],
}
`;
